# car_repair_shop_backend

./: Cargo.toml  README.md  database.db
examples/shop_cli/: client.rs  main.rs
examples/shop_cli/employee/: mechanic.rs  mod.rs  technician.rs
shop_backend/: Cargo.toml
shop_backend/src/: database.rs  entities.rs  error.rs  errors.rs  lib.rs  user.rs
shop_backend/src/db_entities/: client.rs  employee.rs  prelude.rs  report.rs
shop_backend/src/entities/: client.rs  employee.rs  order.rs  report.rs
shop_backend/src/migrator/: m20240108_00001_create_client_table.rs  m20240108_00001_create_employee_table.rs  m20240108_00001_create_order_table.rs  m20240108_00001_create_report_table.rs  m20240111_00001_create_client_table.rs  m20240111_00001_create_employee_table.rs  m20240111_00001_create_order_table.rs  m20240111_00001_create_report_table.rs  mod.rs
shop_backend/src/shop_backend/: clients.rs  common.rs  employee.rs  employees.rs  mod.rs  orders.rs  reports.rs
shop_cli/: Cargo.toml
shop_cli/src/: client.rs  common.rs  lib.rs  main.rs
shop_cli/src/employee/: mechanic.rs  mod.rs  technician.rs
src/: errors.rs  user.rs
src/db_entities/: mod.rs  order.rs
src/migrator/: m20240111_00001_create_employee_table.rs  mod.rs
src/shop_backend/: clients.rs  employees.rs  mod.rs  orders.rs  reports.rs
