[package]
name = "car_repair_shop_backend"
version = "0.1.0"
edition = "2021"

[[example]]
name = "shop_cli"


[dependencies]
dotenvy = "0.15.7"
function_name = "0.3.0"
regex = { version = "1.10.2", features = ["use_std"] }
sea-orm = { version = "0.12.10", features = [
    "sqlx-all",
    "runtime-tokio-native-tls",
] }
sea-orm-migration = "0.12.10"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"

[dev-dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bcrypt = "0.15.0"
clap = { version = "4.4.13", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["password"] }
once_cell = "1.19.0"
zeroize = "1.7.0"
