[package]
name = "shop_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
function_name = "0.3.0"
once_cell = "1.19.0"
regex = { version = "1.10.2", features = ["use_std"] }
sea-orm = { version = "0.12.10", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
sea-orm-migration = "0.12.10"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
