[package]
name = "shop_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bcrypt = "0.15.0"
clap = { version = "4.4.13", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["password"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"

shop_backend = { workspace = true }
zeroize = "1.7.0"
